time now simple!

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,21 @@
 extends layout
 
 block content
-  h1= #{title}
+  h1= title
   p Welcome to #{title}
-  h1 현재 시각은 #{time}
+  h1(id='time-header')
+
+  script.
+    function updateTime() {
+      document.getElementById('time-header').innerText = '현재 시각은 ' + new Date().toLocaleString();
+    }
+
+    updateTime()
+
+    setInterval(() => {
+      updateTime()
+    }, 1000)
+
   p ip 주소는 #{ip}
 
   table(style='width:25%; text-align: center;', border='1')
